Fix UI issues: eliminate double scrolling, standardize heading colors, hid default scrollbar, fixe TV content spacing in mobile view, update background shapes, and improve social dropdown animations

--- a/index.html
+++ b/index.html
@@ -432,14 +432,10 @@
                 alt="Dedication icon"
               />
               <p>
-                My dedication to investing time and effort into projects is
-                rooted in a deep commitment to both success and growth. I
-                approach every initiative with a mindset of ownership, treating
-                challenges as opportunities to drive meaningful results. This
-                means taking initiative beyond assigned tasks—like identifying
-                process gaps or proposing improvements—and holding myself
-                accountable for outcomes, whether through post-project reviews
-                or transparently addressing setbacks.
+                I invest deeply in my projects, taking ownership beyond assigned
+                duties. I view challenges as growth opportunities, proactively
+                identify improvements, and hold myself accountable for results
+                through honest assessment of both successes and failures.
               </p>
               <p>Source: Me</p>
             </div>
