--- a/index.html
+++ b/index.html
@@ -522,7 +522,9 @@
     <!-- bootstrap JS and its dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-    <!-- scripts -->
-    <script src="PortfolioScript.js"></script>
+    <!-- local java scripts -->
+    <script src="js/email-sender.js"></script>
+    <script src="js/navbar.js"></script>
+    <script src="js/tv-carousel.js"></script>
   </body>
 </html>
