--- a/about.html
+++ b/about.html
@@ -14,6 +14,8 @@
       type="image/ico"
       href="web_portfolio_images/Logo/portfolio_logo_favicon.ico"
     />
+    <!-- Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
     <!-- header -->
@@ -108,38 +110,15 @@
             <dt>Course:</dt>
             <dd>Information Technology (Soon to be Degree)</dd>
           </dl>
-        </div>
 
-        <!-- top right -->
-        <div class="about-top-right">
-          <div class="ego-section">
-            <!-- design ego list -->
-            <h3>Design Ego</h3>
-            <ul class="spark-list">
-              <li>UI Design</li>
-              <li>UX Design</li>
-              <li>System Design</li>
-              <li>Coating your designs with a dreamlike glaze</li>
-            </ul>
-          </div>
-          <div class="ego-section">
-            <h3>Code Ego</h3>
-            <!-- code ego list -->
-            <ul class="spark-list">
-              <li>HTML/CSS</li>
-              <li>JavaScript</li>
-              <li>Java</li>
-              <li>Questioning my life decisions</li>
-            </ul>
-          </div>
-          <!-- pie chart -->
-          <div class="ego-pie">
-            <div class="pacman-chart" aria-label="Design 70%, Code 30%"></div>
+          <!-- Skills Distribution Chart -->
+          <div class="skills-chart-container mt-4">
+            <h4>Skills Distribution</h4>
+            <div class="chart-wrapper">
+              <canvas id="skillsPieChart"></canvas>
+            </div>
           </div>
         </div>
-
-        <!-- vertical separator line -->
-        <div class="about-vertical-line"></div>
 
         <!-- bottom left -->
         <div class="about-bottom-left">
@@ -191,5 +170,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     <!-- local java scripts -->
     <script src="js/navbar.js"></script>
+    <script src="js/skills-chart.js"></script>
   </body>
 </html>
