Fix some spacing issues inside home and about sections

--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
     <nav class="vertical-nav" aria-label="Main Navigation">
       <ul>
         <li>
-          <a href="home.html" class="nav-link" data-tooltip="Home">
+          <a href="index.html" class="nav-link" data-tooltip="Home">
             <img
               src="web_portfolio_images/SVGs/home_icon_white.svg"
               alt="Home Page"
