--- a/about.html
+++ b/about.html
@@ -16,6 +16,26 @@
     />
   </head>
   <body>
+    <!-- Background Video -->
+    <video
+      class="bg-video"
+      autoplay
+      muted
+      loop
+      playsinline
+      preload="auto"
+      width="1920"
+      height="1080"
+    >
+      <source src="videos/portfolio_bg.mp4" type="video/mp4" />
+      <track
+        kind="descriptions"
+        src="videos/portfolio_bg.vtt"
+        label="Video Description"
+        default
+      />
+      Your browser does not support the video tag.
+    </video>
     <!-- header -->
     <header class="header">
       <div class="logo">
@@ -171,5 +191,6 @@
     <!-- local java scripts -->
     <script src="js/navbar.js"></script>
     <script src="js/skills-chart.js"></script>
+    <script src="js/video-background.js"></script>
   </body>
 </html>
