--- a/index.html
+++ b/index.html
@@ -21,6 +21,27 @@
     />
   </head>
   <body>
+    <!-- Background Video -->
+    <video
+      class="bg-video"
+      autoplay
+      muted
+      loop
+      playsinline
+      preload="auto"
+      width="1920"
+      height="1080"
+    >
+      <source src="videos/portfolio_bg.mp4" type="video/mp4" />
+      <track 
+        kind="descriptions"
+        src="videos/portfolio_bg.vtt"
+        label="Video Description"
+        default
+      />
+      Your browser does not support the video tag.
+    </video>
+
     <!-- header -->
     <header class="header">
       <div class="logo">
@@ -73,7 +94,7 @@
     <nav class="vertical-nav" aria-label="Main Navigation">
       <ul>
         <li>
-          <a href="home.html" class="nav-link active" data-tooltip="Home">
+          <a href="index.html" class="nav-link active" data-tooltip="Home">
             <img
               src="web_portfolio_images/SVGs/home_icon_white.svg"
               alt="Home Page"
@@ -217,5 +238,6 @@
     <!-- local java scripts -->
     <script src="js/email-sender.js"></script>
     <script src="js/navbar.js"></script>
+    <script src="js/video-background.js"></script>
   </body>
 </html>
