--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
       width="1920"
       height="1080"
     >
-      <source src="videos/portfolio_bg.mp4" type="video/mp4" />
+      <source src="videos/portfolio_bg480.mp4" type="video/mp4" />
       <track
         kind="descriptions"
         src="videos/portfolio_bg.vtt"
