Update page titles and optimize video settings for better performance

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ashton James</title>
+    <title>Ashton James | About</title>
     <!-- CSS files -->
     <link rel="stylesheet" href="css/global.css" />
     <link rel="stylesheet" href="css/header-nav.css" />
@@ -23,9 +23,9 @@
       muted
       loop
       playsinline
-      preload="auto"
-      width="1920"
-      height="1080"
+      preload="metadata"
+      width="1280"
+      height="720"
     >
       <source src="videos/portfolio_bg480.mp4" type="video/mp4" />
       <track
