Add actual links to your GitHub and LinkedIn profiles. Update the header in the Tech Stack page from "Skills" to "Tech Stack". Show the logos all at once instead of requiring the user to press each tab. Add more padding to the end of pages to prevent overlap with bottom nav icons. Put attributes and end tags to a different line. Integrate a CSS framework. Change about page information

--- a/about.html
+++ b/about.html
@@ -66,14 +66,22 @@
             />
             X
           </a>
-          <a href="https://github.com" target="_blank" class="social-icon">
+          <a
+            href="https://github.com/Kscopee"
+            target="_blank"
+            class="social-icon"
+          >
             <img
               src="web_portfolio_images/SVGs/github_icon_white.svg"
               alt="GitHub"
             />
             GitHub
           </a>
-          <a href="https://linkedin.com" target="_blank" class="social-icon">
+          <a
+            href="https://www.linkedin.com/in/ashton-james-caspe-bba704363"
+            target="_blank"
+            class="social-icon"
+          >
             <img
               src="web_portfolio_images/SVGs/likedin_icon_white.svg"
               alt="LinkedIn"
@@ -156,27 +164,25 @@
           <article class="about-rant">
             <h3>WAIT A MINUTE WHO ARE YOU?</h3>
             <p>
-              My name is Ashton James, and I am now studying at St. Dominic
-              College of Asia as an information technology student. My
-              enthusiasm primarily lays in artistic design this translates well
-              to UI and UX. I also enjoy theory-crafting systems and projects.
+              My journey into the world of technology began with a spark ignited
+              by Nier: Automata—a game that masterfully intertwines existential
+              philosophy with immersive storytelling. This experience deepened
+              my fascination with how narratives and interactivity can coexist,
+              prompting me to pursue IT as a student. Beyond code, I channel
+              creativity through strumming melodies on my guitar, exploring the
+              rich tapestries of anime, and dissecting the nuances of literary
+              classics. These passions collectively shape my perspective,
+              blending analytical rigor with artistic sensibility.
             </p>
             <p>
-              Though coding is not my main passion, I enjoy it enough to pursue
-              it as a career. The process of gradually discovering how
-              technology and computers work is truly fascinating. Even though
-              I'm a little sluggish to apply what I've learnt. Despite this, I
-              hope to improve my understanding and expertise of computers,
-              particularly in the front end department.
-            </p>
-            <p>
-              When I'm not looking at the screen, writing programming or
-              designing, I participate in generating types of entertainment
-              media such as anime, movies documentaries. To relax my eyes, I
-              read traditional literature such as Homer's "The Iliad" and
-              Alexandre Dumas' "The Count of Monte Cristo". When I'm not doing
-              that, I work out to keep my body from deteriorating. And that's
-              it!
+              As an aspiring software and web developer, I aim to craft
+              solutions that transcend functionality. My goal is to build
+              applications and digital experiences that serve as both practical
+              tools and reflective mirrors—empowering users to navigate life’s
+              challenges while inviting introspection. Whether through sleek
+              interfaces or dynamic systems, I strive to weave storytelling into
+              technology, creating platforms that resonate on a human level and
+              leave lasting impressions.
             </p>
           </article>
         </div>
