--- a/index.html
+++ b/index.html
@@ -65,21 +65,22 @@
           <div class="top-highlight"></div>
           <!-- drop down content -->
           <h6>Follow Me</h6>
-          <a href="https://x.com" target="_blank" class="social-icon">
-            <img
-              src="web_portfolio_images/SVGs/x_icon_white.svg"
-              alt="X (Twitter)"
-            />
-            X
-          </a>
-          <a href="https://github.com" target="_blank" class="social-icon">
+          <a
+            href="https://github.com/Kscopee"
+            target="_blank"
+            class="social-icon"
+          >
             <img
               src="web_portfolio_images/SVGs/github_icon_white.svg"
               alt="GitHub"
             />
             GitHub
           </a>
-          <a href="https://linkedin.com" target="_blank" class="social-icon">
+          <a
+            href="https://www.linkedin.com/in/ashton-james-caspe-bba704363"
+            target="_blank"
+            class="social-icon"
+          >
             <img
               src="web_portfolio_images/SVGs/likedin_icon_white.svg"
               alt="LinkedIn"
