--- a/tech-stack.html
+++ b/tech-stack.html
@@ -71,14 +71,22 @@
             />
             X
           </a>
-          <a href="https://github.com" target="_blank" class="social-icon">
+          <a
+            href="https://github.com/Kscopee"
+            target="_blank"
+            class="social-icon"
+          >
             <img
               src="web_portfolio_images/SVGs/github_icon_white.svg"
               alt="GitHub"
             />
             GitHub
           </a>
-          <a href="https://linkedin.com" target="_blank" class="social-icon">
+          <a
+            href="https://www.linkedin.com/in/ashton-james-caspe-bba704363"
+            target="_blank"
+            class="social-icon"
+          >
             <img
               src="web_portfolio_images/SVGs/likedin_icon_white.svg"
               alt="LinkedIn"
@@ -128,7 +136,7 @@
       <!-- ===== TECH STACK ===== -->
       <section id="tech-stack" class="section">
         <!-- title -->
-        <h2 class="skills-title">SKILLS</h2>
+        <h2 class="skills-title">Tech Stack</h2>
 
         <!-- skill toggle -->
         <div class="skill-switcher">
@@ -138,202 +146,74 @@
           <button class="skill-toggle" data-type="soft">Soft</button>
         </div>
 
-        <!-- left column - skill lists -->
-        <div class="skill-columns">
+        <!-- skills grid -->
+        <div class="skills-grid">
           <!-- technical skills -->
-          <article class="skill-list technical" data-active="true">
-            <h3>Technical Skills</h3>
-            <ul>
-              <li data-skill="html">HTML</li>
-              <li data-skill="css">CSS</li>
-              <li data-skill="javascript">JavaScript</li>
-              <li data-skill="java">Java</li>
-            </ul>
-          </article>
-
-          <!-- soft skills -->
-          <article class="skill-list soft" data-active="false">
-            <h3>Soft Skills</h3>
-            <ul>
-              <li data-skill="communication">Communication</li>
-              <li data-skill="creativity">Creativity</li>
-              <li data-skill="organization">Organization</li>
-              <li data-skill="dedication">Dedication</li>
-            </ul>
-          </article>
-        </div>
-
-        <!-- tv screen section -->
-        <div class="tv-screen">
-          <!-- skill slides container -->
-          <div class="skill-slides">
-            <!-- technical skills slides -->
-            <!-- html -->
-            <div
-              class="skill-slide technical"
-              data-skill="html"
-              data-active="true"
-            >
-              <h4>HTML</h4>
-              <img
-                src="web_portfolio_images/SVGs/html_logo.svg"
-                alt="HTML logo"
-              />
-              <p>
-                If you want to have readable and structured semantic markup for
-                modern web applications? I'm your guy.
-              </p>
-              <p>Source: Me</p>
-            </div>
-            <!-- css -->
-            <div
-              class="skill-slide technical"
-              data-skill="css"
-              data-active="false"
-            >
-              <h4>CSS</h4>
-              <img
-                src="web_portfolio_images/SVGs/css_logo.svg"
-                alt="CSS logo"
-              />
-              <p>
-                Need some flavor in your site? I hear your plight. Thus, help me
-                help you make your design just right.
-              </p>
-              <p>Source: Me</p>
-            </div>
-            <!-- javascript -->
-            <div
-              class="skill-slide technical"
-              data-skill="javascript"
-              data-active="false"
-            >
-              <h4>JavaScript</h4>
-              <img
-                src="web_portfolio_images/SVGs/javascript_logo.svg"
-                alt="JavaScript logo"
-              />
-              <p>
-                Quality of Life? I got it, with my experience in creating
-                interactive web components and dynamic user interfaces I'll make
-                sure sites go as smooth as possible (emphasis on 'as possible').
-              </p>
-              <p>Source: Me</p>
-            </div>
-            <!-- java -->
-            <div
-              class="skill-slide technical"
-              data-skill="java"
-              data-active="false"
-            >
-              <h4>Java</h4>
-              <img
-                src="web_portfolio_images/SVGs/java_logo.svg"
-                alt="Java logo"
-              />
-              <p>
-                I have studied and developed applications using object-oriented
-                programming principles. Especially for making android
-                applications.
-              </p>
-              <p>Source: Me</p>
-            </div>
-
-            <!-- soft skill slides -->
-            <!-- communication -->
-            <div
-              class="skill-slide soft"
-              data-skill="communication"
-              data-active="false"
-            >
-              <h4>Communication</h4>
-              <img
-                src="web_portfolio_images/SVGs/communication_icon.svg"
-                alt="Communication icon"
-              />
-              <p>
-                Communication is the key to understanding oneself and others.
-                Thus, I regard communication as a key component in making and
-                managing projects. To that end, I try to make myself as clear
-                and successful as a communicator. Across multiple platforms and
-                teams.
-              </p>
-              <p>Source: Me</p>
-            </div>
-            <!-- creativity -->
-            <div
-              class="skill-slide soft"
-              data-skill="creativity"
-              data-active="false"
-            >
-              <h4>Creativity</h4>
-              <img
-                src="web_portfolio_images/SVGs/creativity_icon.svg"
-                alt="Creativity icon"
-              />
-              <p>
-                Creativity is not a trait one inherently has, it is a process of
-                taking inspiration from a myriad of sources and refining it.
-                Making it your own.
-              </p>
-              <p>Source: Me</p>
-            </div>
-            <!-- organization -->
-            <div
-              class="skill-slide soft"
-              data-skill="organization"
-              data-active="false"
-            >
-              <h4>Organization</h4>
-              <img
-                src="web_portfolio_images/SVGs/organization.svg"
-                alt="Organization icon"
-              />
-              <p>
-                I like to keep things structured when it comes to handling
-                project projects as it keeps my and other peoples ambitions and
-                creativity in check, making for a smoother and streamlined
-                project experience. That's my take at least
-              </p>
-              <p>Source: Me</p>
-            </div>
-            <!-- dedication -->
-            <div
-              class="skill-slide soft"
-              data-skill="dedication"
-              data-active="false"
-            >
-              <h4>Dedication</h4>
-              <img
-                src="web_portfolio_images/SVGs/dedication_icon.svg"
-                alt="Dedication icon"
-              />
-              <p>
-                I invest deeply in my projects, taking ownership beyond assigned
-                duties. I view challenges as growth opportunities, proactively
-                identify improvements, and hold myself accountable for results
-                through honest assessment of both successes and failures.
-              </p>
-              <p>Source: Me</p>
+          <div class="skill-section technical" data-active="true">
+            <div class="skill-grid">
+              <div class="skill-item">
+                <img
+                  src="web_portfolio_images/SVGs/html_logo.svg"
+                  alt="HTML logo"
+                />
+                <h4>HTML</h4>
+              </div>
+              <div class="skill-item">
+                <img
+                  src="web_portfolio_images/SVGs/css_logo.svg"
+                  alt="CSS logo"
+                />
+                <h4>CSS</h4>
+              </div>
+              <div class="skill-item">
+                <img
+                  src="web_portfolio_images/SVGs/javascript_logo.svg"
+                  alt="JavaScript logo"
+                />
+                <h4>JavaScript</h4>
+              </div>
+              <div class="skill-item">
+                <img
+                  src="web_portfolio_images/SVGs/java_logo.svg"
+                  alt="Java logo"
+                />
+                <h4>Java</h4>
+              </div>
             </div>
           </div>
 
-          <!-- tv controls -->
-          <div class="tv-controls">
-            <div class="nav-arrows">
-              <button class="arrow prev"></button>
-              <button class="arrow next"></button>
+          <!-- soft skills -->
+          <div class="skill-section soft" data-active="false">
+            <div class="skill-grid">
+              <div class="skill-item">
+                <img
+                  src="web_portfolio_images/SVGs/communication_icon.svg"
+                  alt="Communication icon"
+                />
+                <h4>Communication</h4>
+              </div>
+              <div class="skill-item">
+                <img
+                  src="web_portfolio_images/SVGs/creativity_icon.svg"
+                  alt="Creativity icon"
+                />
+                <h4>Creativity</h4>
+              </div>
+              <div class="skill-item">
+                <img
+                  src="web_portfolio_images/SVGs/organization.svg"
+                  alt="Organization icon"
+                />
+                <h4>Organization</h4>
+              </div>
+              <div class="skill-item">
+                <img
+                  src="web_portfolio_images/SVGs/dedication_icon.svg"
+                  alt="Dedication icon"
+                />
+                <h4>Dedication</h4>
+              </div>
             </div>
-
-            <!-- page indicators -->
-            <div class="page-indicators">
-              <div class="indicator active" data-page="1"></div>
-              <div class="indicator" data-page="2"></div>
-              <div class="indicator" data-page="3"></div>
-              <div class="indicator" data-page="4"></div>
-            </div>
-
-            <div class="tv-label">Skills</div>
           </div>
         </div>
       </section>
